Fix list spacing, add new linear algebra review draft.

--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -115,15 +115,15 @@
         padding: $base-spacing/5 $base-spacing;
     }
     ul {
-        list-style-type: circle;
+        list-style-type: disc;
     }
     ol {
         list-style-type: decimal;
     }
     li {
-      font-size: 19px;
+      //font-size: 19px;
       font-weight: lighter;
-      margin: 0.8em 0em 0.8em 0.5em;
+      //margin: 0.8em 0em 0.8em 0.5em;
     }
     li p {
         font-size: 19px;
